chore: remove plugins workspace yml

--- a/package.json
+++ b/package.json
@@ -241,6 +241,7 @@
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
     "typescript-transform-paths": "^3.4.7",
+    "unbuild": "^2.0.0",
     "vinyl": "^3.0.0",
     "vite": "^5.2.10",
     "vitest": "^1.5.0",
