--- a/package.json
+++ b/package.json
@@ -197,7 +197,7 @@
     "@types/webpack4": "npm:@types/webpack@4",
     "@vitest/coverage-v8": "^1.5.0",
     "@vitest/ui": "^1.5.0",
-    "@weapp-tailwindcss/cli": "0.0.0-alpha.5",
+    "@weapp-tailwindcss/cli": "workspace:*",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "bumpp": "^9.4.0",
