--- a/plugins/cli/package.json
+++ b/plugins/cli/package.json
@@ -41,8 +41,10 @@
     "gulp-sass": "^5.1.0",
     "gulp-if": "^3.0.0",
     "postcss": "^8.4.38",
-    "postcss-load-config": "^5.0.3",
-    "weapp-tailwindcss": "3.2.0-alpha.4"
+    "postcss-load-config": "^5.0.3"
+  },
+  "peerDependencies": {
+    "weapp-tailwindcss": "workspace:*"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
