chore: move native app to apps folder

--- a/apps/native-ts/project.config.json
+++ b/apps/native-ts/project.config.json
@@ -17,10 +17,16 @@
     "minified": false,
     "enhance": false,
     "showShadowRootInWxmlPanel": false,
-    "packNpmRelationList": [],
+    "packNpmRelationList": [
+      {
+        "packageJsonPath": "./package.json",
+        "miniprogramNpmDistDir": "./dist"
+      }
+    ],
     "ignoreUploadUnusedFiles": true,
     "compileHotReLoad": false,
-    "skylineRenderEnable": true
+    "skylineRenderEnable": true,
+    "packNpmManually": true
   },
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
