chore: remove build demo mode

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "weapp-tailwindcss-monorepo",
-  "version": "3.2.0-alpha.5",
+  "private": true,
+  "version": "0.0.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们! bring tailwindcss jit engine to miniprogram developers!",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -73,24 +74,12 @@
   },
   "sideEffects": false,
   "scripts": {
-    "dev": "pnpm clean && pnpm dts && cross-env NODE_ENV=development rollup -c rollup.config.ts --configPlugin typescript -w",
-    "build": "pnpm clean && cross-env NODE_ENV=production rollup -c rollup.config.ts --configPlugin typescript && pnpm dts",
-    "build:demo": "pnpm demo:del-dist && cross-env NODE_ENV=demo rollup -c rollup.config.ts --configPlugin typescript && pnpm demo:sync-dist",
-    "build:tsc": "cross-env NODE_ENV=development tsc --build tsconfig.json",
-    "build:cli": "cd plugins/cli && pnpm run build",
-    "dts": "tsc --emitDeclarationOnly -p tsconfig.dts.json",
     "test": "npm run postinstall && cross-env TARGET=1 vitest run",
     "test:dev": "cross-env TARGET=1 vitest",
     "test:ui": "vitest --ui",
-    "vitest:coverage": "vitest run --coverage",
     "e2e": "vitest run -c ./vitest.e2e.config.ts",
     "e2e:dev": "vitest -c ./vitest.e2e.config.ts",
     "e2e:u": "vitest run -u -c ./vitest.e2e.config.ts",
-    "init:rename": "node scripts/init/rename.js",
-    "clean": "node scripts/clean.js",
-    "debug:web": "cd demo/web && pnpm dev",
-    "raw": "ts-node scripts/raw",
-    "get-decl": "ts-node scripts/get-decl.ts",
     "demo:dev": "node scripts/demo/dev.js",
     "demo:build": "node scripts/demo/build.js",
     "demo:bench": "node scripts/demo/bench.js",
