chore: test config change

--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -78,13 +78,10 @@
     "build:tsc": "cross-env NODE_ENV=development tsc --build tsconfig.json",
     "build:cli": "cd plugins/cli && pnpm run build",
     "dts": "tsc --emitDeclarationOnly -p tsconfig.dts.json",
-    "test": "npm run postinstall && cross-env TARGET=1 vitest run",
-    "test:dev": "cross-env TARGET=1 vitest",
+    "test": "npm run postinstall && vitest run",
+    "test:dev": "vitest",
     "test:ui": "vitest --ui",
     "vitest:coverage": "vitest run --coverage",
-    "e2e": "vitest run -c ./vitest.e2e.config.ts",
-    "e2e:dev": "vitest -c ./vitest.e2e.config.ts",
-    "e2e:u": "vitest run -u -c ./vitest.e2e.config.ts",
     "init:rename": "node scripts/init/rename.js",
     "clean": "node scripts/clean.js",
     "raw": "ts-node scripts/raw",
