--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
   },
   "sideEffects": false,
   "scripts": {
-    "test": "npm run postinstall && cross-env TARGET=1 vitest run",
-    "test:dev": "cross-env TARGET=1 vitest",
+    "test": "vitest run",
+    "test:dev": "vitest",
     "test:ui": "vitest --ui",
     "e2e": "vitest run -c ./vitest.e2e.config.ts",
     "e2e:dev": "vitest -c ./vitest.e2e.config.ts",
@@ -206,6 +206,7 @@
     "mini-css-extract-plugin": "^2.9.0",
     "miniprogram-automator": "^0.12.1",
     "pkg-types": "^1.1.0",
+    "postcss": "^8.4.38",
     "postcss-load-config": "^5.0.3",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.2.5",
