--- a/apps/native-ts/package.json
+++ b/apps/native-ts/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "cross-env DEBUG='weapp-tw' weapp-tw dev",
     "build": "cross-env DEBUG='weapp-tw' weapp-tw build",
-    "_postinstall": "weapp-tw patch"
+    "postinstall": "weapp-tw patch"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.0",
     "miniprogram-api-typings": "^2.8.3-1",
+    "tailwindcss": "^3.4.3",
     "weapp-tailwindcss": "workspace:*"
   }
 }
