--- a/package.json
+++ b/package.json
@@ -214,6 +214,7 @@
     "rollup": "^4.16.3",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.75.0",
+    "semver": "7.6.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
