--- a/apps/native-ts/package.json
+++ b/apps/native-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "miniprogram-ts-less-quickstart",
+  "name": "miniprogram-ts-sass-quickstart",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.0",
-    "miniprogram-api-typings": "^2.8.3-1",
+    "miniprogram-api-typings": "^3.12.2",
     "tailwindcss": "^3.4.3",
     "weapp-tailwindcss": "workspace:*"
   }
