--- a/package.json
+++ b/package.json
@@ -145,7 +145,7 @@
   },
   "homepage": "https://weapp-tw.icebreaker.top",
   "devDependencies": {
-    "@ast-grep/napi": "^0.20.5",
+    "@ast-grep/napi": "^0.21.0",
     "@babel/core": "^7.24.4",
     "@icebreakers/cli": "0.1.1",
     "@icebreakers/readme": "0.1.0",
@@ -161,8 +161,13 @@
     "@types/debug": "^4.1.12",
     "@types/diff": "^5.2.0",
     "@types/fs-extra": "^11.0.4",
+    "@types/get-value": "^3.0.5",
     "@types/gulp": "^4.0.17",
+    "@types/gulp-if": "^3.0.4",
+    "@types/gulp-less": "^0.0.36",
+    "@types/gulp-plumber": "^0.0.37",
     "@types/gulp-postcss": "^8.0.6",
+    "@types/gulp-sass": "^5.0.4",
     "@types/js-beautify": "^1.14.3",
     "@types/klaw": "^3.0.6",
     "@types/loader-utils": "^2.0.6",
@@ -171,16 +176,19 @@
     "@types/micromatch": "^4.0.7",
     "@types/node": "^20.12.7",
     "@types/semver": "^7.5.8",
+    "@types/set-value": "^4.0.3",
     "@types/vinyl": "^2.0.12",
+    "@types/vinyl-fs": "^3.0.5",
     "@types/webpack": "^5.28.5",
     "@types/webpack-sources": "^3.2.3",
     "@types/webpack4": "npm:@types/webpack@4",
-    "@vitest/coverage-v8": "^1.5.0",
-    "@vitest/ui": "^1.5.0",
+    "@vitest/coverage-v8": "^1.5.1",
+    "@vitest/ui": "^1.5.1",
     "@weapp-tailwindcss/cli": "workspace:*",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "bumpp": "^9.4.0",
+    "chokidar": "^3.6.0",
     "colorette": "^2.0.20",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.1",
@@ -197,6 +205,7 @@
     "execa": "^8.0.1",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
+    "get-value": "^3.0.1",
     "gulp": "^5.0.0",
     "gulp-postcss": "^10.0.0",
     "html-loader": "^5.0.0",
@@ -211,12 +220,14 @@
     "postcss-loader": "^8.1.1",
     "prettier": "^3.2.5",
     "promisify-loader-runner": "^1.0.1",
-    "rollup": "^4.16.3",
+    "rollup": "^4.16.4",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.75.0",
     "semver": "7.6.0",
+    "set-value": "^4.1.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.3",
+    "ts-morph": "^22.0.0",
     "ts-node": "^10.9.2",
     "ts-patch": "^3.1.2",
     "tsd": "^0.31.0",
@@ -225,8 +236,9 @@
     "typescript-transform-paths": "^3.4.7",
     "unbuild": "^2.0.0",
     "vinyl": "^3.0.0",
+    "vinyl-fs": "^4.0.0",
     "vite": "^5.2.10",
-    "vitest": "^1.5.0",
+    "vitest": "^1.5.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.91.0",
     "webpack-build-utils": "^0.0.7"
