--- a/package.json
+++ b/package.json
@@ -193,6 +193,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.1",
     "css-to-tailwindcss-plugin": "^0.3.0",
+    "debug": "4.3.4",
     "dedent": "^1.5.3",
     "defu": "6.1.4",
     "del": "^7.1.0",
