--- a/plugins/cli/package.json
+++ b/plugins/cli/package.json
@@ -49,6 +49,7 @@
     "gulp-less": "^5.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^10.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "picocolors": "^1.0.0",
     "postcss": "^8.4.38",
