--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,56 +1,13 @@
 {
-  "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDirs": [
-      "src",
-      "test"
-    ],
-    "lib": [
-      "ES2021"
-    ],
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
-    "resolveJsonModule": true,
-    "moduleResolution": "Node",
+    "jsx": "react",
+    "target": "ESNext",
     "module": "ESNext",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "#test/*": [
-        "test/*"
-      ],
-    },
-    "plugins": [
-      {
-        "transform": "typescript-transform-paths",
-        "afterDeclarations": true
-      }
-    ],
+    "moduleResolution": "Node",
+    "esModuleInterop": true,
+    "strict": true,
     "types": [
-      "webpack",
-      "node",
       "vitest/globals"
     ]
-  },
-  "exclude": [
-    "dist",
-    "node_modules",
-    "test/types",
-    "./*.d.ts",
-    "demo/**/*",
-    "test/fixtures/**/*"
-  ],
-  "include": [
-    "src/**/*",
-    "types/**/*",
-    "test/**/*",
-    "e2e/**/*",
-  ],
-  "ts-node": {
-    "compilerOptions": {
-      "module": "CommonJS"
-    }
   }
 }
