--- a/package.json
+++ b/package.json
@@ -145,7 +145,7 @@
   },
   "homepage": "https://weapp-tw.icebreaker.top",
   "devDependencies": {
-    "@ast-grep/napi": "^0.21.0",
+    "@ast-grep/napi": "^0.21.1",
     "@babel/core": "^7.24.4",
     "@icebreakers/cli": "0.1.1",
     "@icebreakers/readme": "0.1.0",
@@ -181,9 +181,10 @@
     "@types/vinyl-fs": "^3.0.5",
     "@types/webpack": "^5.28.5",
     "@types/webpack-sources": "^3.2.3",
+    "@types/gulp-rename": "^2.0.6",
     "@types/webpack4": "npm:@types/webpack@4",
-    "@vitest/coverage-v8": "^1.5.1",
-    "@vitest/ui": "^1.5.1",
+    "@vitest/coverage-v8": "^1.5.2",
+    "@vitest/ui": "^1.5.2",
     "@weapp-tailwindcss/cli": "workspace:*",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
@@ -239,7 +240,7 @@
     "vinyl": "^3.0.0",
     "vinyl-fs": "^4.0.0",
     "vite": "^5.2.10",
-    "vitest": "^1.5.1",
+    "vitest": "^1.5.2",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.91.0",
     "webpack-build-utils": "^0.0.7"
