--- a/plugins/tsconfig.json
+++ b/plugins/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "strict": true,
     "types": [
       "vitest/globals"
