--- a/apps/native-ts/package.json
+++ b/apps/native-ts/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "cross-env DEBUG='weapp-tw' weapp-tw dev",
-    "build": "cross-env DEBUG='weapp-tw' weapp-tw build",
+    "dev": "cross-env DEBUG='weapp-tw,weapp-tw-cli' weapp-tw dev",
+    "build": "cross-env DEBUG='weapp-tw,weapp-tw-cli' weapp-tw build",
     "postinstall": "weapp-tw patch"
   },
   "keywords": [],
