chore: why stream never finish?

--- a/package.json
+++ b/package.json
@@ -163,10 +163,12 @@
     "@types/fs-extra": "^11.0.4",
     "@types/get-value": "^3.0.5",
     "@types/gulp": "^4.0.17",
+    "@types/gulp-debug": "^2.0.36",
     "@types/gulp-if": "^3.0.4",
     "@types/gulp-less": "^0.0.36",
     "@types/gulp-plumber": "^0.0.37",
     "@types/gulp-postcss": "^8.0.6",
+    "@types/gulp-rename": "^2.0.6",
     "@types/gulp-sass": "^5.0.4",
     "@types/js-beautify": "^1.14.3",
     "@types/klaw": "^3.0.6",
@@ -181,7 +183,6 @@
     "@types/vinyl-fs": "^3.0.5",
     "@types/webpack": "^5.28.5",
     "@types/webpack-sources": "^3.2.3",
-    "@types/gulp-rename": "^2.0.6",
     "@types/webpack4": "npm:@types/webpack@4",
     "@vitest/coverage-v8": "^1.5.2",
     "@vitest/ui": "^1.5.2",
