--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
     "@vitest/coverage-v8": "^1.5.2",
     "@vitest/ui": "^1.5.2",
     "@weapp-tailwindcss/cli": "workspace:*",
+    "anymatch": "^3.1.3",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "bumpp": "^9.4.0",
