--- a/apps/native-ts-skyline/package.json
+++ b/apps/native-ts-skyline/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "miniprogram-ts-less-quickstart",
+  "name": "miniprogram-ts-quickstart",
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "dev": "weapp-tw dev",
+    "build": "weapp-tw build",
+    "postinstall": "weapp-tw patch"
   },
   "keywords": [],
   "author": "",
   "license": "",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "miniprogram-api-typings": "^2.8.3-1"
+    "miniprogram-api-typings": "^3.12.2",
+    "tailwindcss": "^3.4.3",
+    "@weapp-tailwindcss/cli": "workspace:*",
+    "weapp-tailwindcss": "workspace:*"
   }
 }
