--- a/apps/native-ts/package.json
+++ b/apps/native-ts/package.json
@@ -17,6 +17,7 @@
     "@types/lodash": "^4.17.0",
     "miniprogram-api-typings": "^3.12.2",
     "tailwindcss": "^3.4.3",
+    "@weapp-tailwindcss/cli": "workspace:*",
     "weapp-tailwindcss": "workspace:*"
   }
 }
