chore(deps): upgrade

--- a/package.json
+++ b/package.json
@@ -78,9 +78,9 @@
     "test": "vitest run",
     "test:dev": "vitest",
     "test:ui": "vitest --ui",
-    "e2e": "vitest run -c ./vitest.e2e.config.ts",
-    "e2e:dev": "vitest -c ./vitest.e2e.config.ts",
-    "e2e:u": "vitest run -u -c ./vitest.e2e.config.ts",
+    "e2e": "vitest run -c ./e2e/vitest.e2e.config.ts",
+    "e2e:dev": "vitest -c ./e2e/vitest.e2e.config.ts",
+    "e2e:u": "vitest run -u -c ./e2e/vitest.e2e.config.ts",
     "demo:dev": "node scripts/demo/dev.js",
     "demo:build": "node scripts/demo/build.js",
     "demo:bench": "node scripts/demo/bench.js",
