--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -63,6 +63,7 @@
     "@types/webpack-env": "^1.18.4",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "@weapp-tailwindcss/cli": "^0.0.0-alpha.7",
     "autoprefixer": "^10.4.18",
     "babel-plugin-import": "^1.13.8",
     "babel-preset-taro": "3.6.24",
@@ -85,7 +86,7 @@
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "~5.4.2",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.2.0-alpha.6",
+    "weapp-tailwindcss": "^3.2.0-alpha.9",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0",
     "webpack": "^5.90.3",
