--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -14,13 +14,14 @@
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
+    "@weapp-tailwindcss/cli": "^0.0.0-alpha.7",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-rpx-transform": "^1.0.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss-patch": "^2.2.3",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.2.0-alpha.6",
+    "weapp-tailwindcss": "^3.2.0-alpha.9",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0"
   }
