--- a/website/package.json
+++ b/website/package.json
@@ -18,32 +18,32 @@
     "deploy:cos": "yarn build && ice-deploy -c --dir=build"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.3",
-    "@docusaurus/preset-classic": "2.4.3",
-    "@mdx-js/react": "^1.6.22",
+    "@docusaurus/core": "3.2.1",
+    "@docusaurus/preset-classic": "3.2.1",
+    "@mdx-js/react": "^3.0.1",
     "clsx": "^2.1.0",
     "file-saver": "^2.0.5",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "prism-react-renderer": "^2.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.3",
-    "@docusaurus/types": "^2.4.3",
+    "@docusaurus/module-type-aliases": "3.2.1",
+    "@docusaurus/tsconfig": "^3.2.1",
+    "@docusaurus/types": "^3.2.1",
     "@icebreakers/deploy": "^0.1.5",
-    "@tsconfig/docusaurus": "^2.0.3",
     "@types/file-saver": "^2.0.7",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "docusaurus-plugin-sass": "^0.2.5",
-    "docusaurus-plugin-typedoc": "^0.22.0",
+    "docusaurus-plugin-typedoc": "1.0.0-next.30",
     "dotenv": "^16.4.5",
     "node-loader": "^2.0.0",
     "sass": "^1.75.0",
     "sass-loader": "^14.2.0",
     "tailwindcss": "^3.4.3",
     "typedoc": "^0.25.13",
-    "typedoc-plugin-markdown": "^3.17.1",
+    "typedoc-plugin-markdown": "4.0.0-next.59",
     "typescript": "^5.4.5",
     "webpack-node-externals": "^3.0.0"
   },
