--- a/package.json
+++ b/package.json
@@ -3,78 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们! bring tailwindcss jit engine to miniprogram developers!",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
-    },
-    "./replace": {
-      "types": "./dist/replace.d.ts",
-      "require": "./dist/replace.js",
-      "import": "./dist/replace.mjs"
-    },
-    "./postcss": {
-      "types": "./dist/postcss.d.ts",
-      "require": "./dist/postcss.js",
-      "import": "./dist/postcss.mjs"
-    },
-    "./vite": {
-      "types": "./dist/vite.d.ts",
-      "require": "./dist/vite.js",
-      "import": "./dist/vite.mjs"
-    },
-    "./webpack": {
-      "types": "./dist/webpack.d.ts",
-      "require": "./dist/webpack.js",
-      "import": "./dist/webpack.mjs"
-    },
-    "./webpack4": {
-      "types": "./dist/webpack4.d.ts",
-      "require": "./dist/webpack4.js",
-      "import": "./dist/webpack4.mjs"
-    },
-    "./core": {
-      "types": "./dist/core.d.ts",
-      "require": "./dist/core.js",
-      "import": "./dist/core.mjs"
-    },
-    "./gulp": {
-      "types": "./dist/gulp.d.ts",
-      "require": "./dist/gulp.js",
-      "import": "./dist/gulp.mjs"
-    },
-    "./defaults": {
-      "types": "./dist/defaults.d.ts",
-      "require": "./dist/defaults.js",
-      "import": "./dist/defaults.mjs"
-    },
-    "./css-macro/postcss": {
-      "types": "./dist/css-macro/postcss.d.ts",
-      "require": "./dist/css-macro/postcss.js",
-      "import": "./dist/css-macro/postcss.mjs"
-    },
-    "./css-macro": {
-      "types": "./dist/css-macro/index.d.ts",
-      "require": "./dist/css-macro/index.js",
-      "import": "./dist/css-macro/index.mjs"
-    },
-    "./*": "./*"
-  },
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/*",
-        "./dist/index.d.ts"
-      ]
-    }
-  },
-  "sideEffects": false,
   "scripts": {
-    "build:lib": "turbo run build --filter='./packages/*' && turbo run build --filter='./plugins/*'",
+    "build:lib": "turbo run build --filter=weapp-tailwindcss && turbo run build --filter=./plugins/*",
     "test": "vitest run",
     "test:dev": "vitest",
     "test:ui": "vitest --ui",
@@ -147,7 +77,7 @@
   "homepage": "https://weapp-tw.icebreaker.top",
   "devDependencies": {
     "@ast-grep/napi": "^0.21.1",
-    "@babel/core": "^7.24.4",
+    "@babel/core": "^7.24.5",
     "@icebreakers/cli": "0.1.1",
     "@icebreakers/readme": "0.1.0",
     "@rollup/plugin-alias": "^5.1.0",
@@ -225,7 +155,7 @@
     "postcss-loader": "^8.1.1",
     "prettier": "^3.2.5",
     "promisify-loader-runner": "^1.0.1",
-    "rollup": "^4.17.1",
+    "rollup": "^4.17.2",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.75.0",
     "semver": "7.6.0",
