--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -49,7 +49,7 @@
     "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.8",
     "@mpxjs/webpack-plugin": "^2.9.30",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/cli": "^0.0.0-alpha.8",
+    "@weapp-tailwindcss/cli": "^1.0.0",
     "autoprefixer": "^10.4.19",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
@@ -71,7 +71,7 @@
     "typescript": "^5.4.5",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.2.0-alpha.10",
+    "weapp-tailwindcss": "^3.2.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^3.1.1",
     "webpack": "^5.91.0"
