--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -38,7 +38,7 @@
     "@babel/preset-env": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
     "@types/lodash": "^4.17.0",
-    "@weapp-tailwindcss/cli": "^0.0.0-alpha.8",
+    "@weapp-tailwindcss/cli": "^1.0.0",
     "autoprefixer": "^10.4.18",
     "babel-loader": "^9.1.3",
     "babel-plugin-lodash": "^3.3.4",
@@ -68,7 +68,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^5.4.2",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.2.0-alpha.10",
+    "weapp-tailwindcss": "^3.2.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
