--- a/website/package.json
+++ b/website/package.json
@@ -18,8 +18,8 @@
     "deploy:cos": "yarn build && ice-deploy -c --dir=build"
   },
   "dependencies": {
-    "@docusaurus/core": "3.2.1",
-    "@docusaurus/preset-classic": "3.2.1",
+    "@docusaurus/core": "3.3.2",
+    "@docusaurus/preset-classic": "3.3.2",
     "@mdx-js/react": "^3.0.1",
     "clsx": "^2.1.0",
     "file-saver": "^2.0.5",
@@ -28,22 +28,22 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.2.1",
-    "@docusaurus/tsconfig": "^3.2.1",
-    "@docusaurus/types": "^3.2.1",
+    "@docusaurus/module-type-aliases": "3.3.2",
+    "@docusaurus/tsconfig": "^3.3.2",
+    "@docusaurus/types": "^3.3.2",
     "@icebreakers/deploy": "^0.1.5",
     "@types/file-saver": "^2.0.7",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "docusaurus-plugin-sass": "^0.2.5",
-    "docusaurus-plugin-typedoc": "1.0.0-next.30",
+    "docusaurus-plugin-typedoc": "1.0.0",
     "dotenv": "^16.4.5",
     "node-loader": "^2.0.0",
-    "sass": "^1.76.0",
+    "sass": "^1.77.0",
     "sass-loader": "^14.2.0",
     "tailwindcss": "^3.4.3",
     "typedoc": "^0.25.13",
-    "typedoc-plugin-markdown": "4.0.0-next.59",
+    "typedoc-plugin-markdown": "4.0.1",
     "typescript": "^5.4.5",
     "webpack-node-externals": "^3.0.0"
   },
