--- a/website/package.json
+++ b/website/package.json
@@ -15,7 +15,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "deploy:cos": "yarn build && ice-deploy -c --dir=build"
+    "deploy:cos": "pnpm build && ice-deploy -c --dir=build"
   },
   "dependencies": {
     "@docusaurus/core": "3.3.2",
