chore: prepare for release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@ on:
     tags:
       - 'v*'
 
+  # pnpm publish --access public --no-git-checks
+
 jobs:
   release:
     permissions:
@@ -43,7 +45,9 @@ jobs:
         run: pnpm run build
 
       - name: Publish to NPM
-        run: pnpm publish --access public --no-git-checks
+        working-directory: ./packages/weapp-tailwindcss
+        run: pnpm release
+
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
           NPM_CONFIG_PROVENANCE: true
