--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -82,18 +82,18 @@
     "test:dev": "vitest",
     "test:ui": "vitest --ui",
     "vitest:coverage": "vitest run --coverage",
-    "init:rename": "node scripts/init/rename.js",
     "clean": "node scripts/clean.js",
     "raw": "ts-node scripts/raw",
     "get-decl": "ts-node scripts/get-decl.ts",
-    "sync": "cnpm sync weapp-tailwindcss-webpack-plugin weapp-tailwindcss",
-    "generate:readme": "ts-node scripts/readme/write.ts",
+    "sync": "cnpm sync weapp-tailwindcss-webpack-plugin weapp-tailwindcss weapp-tw",
     "format": "prettier --check \"src/**/*.{ts,js}\" -w",
     "format:test": "prettier --check \"test/**/*.test.{ts,js}\" -w",
     "ls:pack": "npm pack --dry-run",
     "cli:patch": "node bin/weapp-tailwindcss.js patch",
     "prepare": "ts-patch install -s",
+    "bump": "bumpp",
     "release": "node scripts/release.js",
+    "generate:readme": "ts-node scripts/readme/write.ts",
     "-------": "-----------",
     "postinstall": "node bin/weapp-tailwindcss.js patch"
   },
