chore: improve bug template

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -12,15 +12,26 @@ body:
 
         此表格仅用于提交错误报告。如果您有使用问题, 或者你不确定这是否真的是一个错误，请确保：
 
-        - 已经在 [weapp-tw.icebreaker.top](https://weapp-tw.icebreaker.top/) 文档网站中搜索过相关的解决方案
-        - 已经在 Github 的 [issues](https://github.com/sonofmagic/weapp-tailwindcss/issues) 中搜索过相关的问题
+        - [x] 已经在 [weapp-tw.icebreaker.top](https://weapp-tw.icebreaker.top/) 文档网站中搜索过相关的解决方案
+        - [x] 已经在 Github 的 [issues](https://github.com/sonofmagic/weapp-tailwindcss/issues) 中搜索过相关的问题
 
         如果您发现最新版本中仍然存在旧的、已解决的问题，
-        您应该填写下方的表格打开一个新问题，而不是对旧问题发表评论。
+        您应该填写下方的表格打开一个新的 `issue`，而不是对旧的 `issue` 发表评论。
   - type: input
     id: version
     attributes:
-      label: "`weapp-tailwindcss` 版本"
+      label: weapp-tailwindcss 版本
+    validations:
+      required: true
+  - type: input
+    id: platform
+    attributes:
+      label: 框架 & 小程序平台
+      description: ｜
+        在什么框架,编译到的什么小程序平台,出现了问题? e.g
+        - uni-app vue3 vite 编译到 qq 小程序
+        - taro react 编译到 微信小程序
+      placeholder: uni-app vue3 vite 编译到 qq 小程序出现问题
     validations:
       required: true
   - type: input
@@ -28,9 +39,8 @@ body:
     attributes:
       label: 最小复现bug的代码仓库链接
       description: |
-        比如说你可以提供 GitHub / Gitee 等可以在线访问到的 git 地址。
-        用例应该尽可能只包含复现错误,所需**最少**的代码量。
-        请不要随意填写链接。如果未提供有效的链接，这个issue将被关闭。
+        这里你可以提供 `GitHub` / `Gitee` 等可以在线访问到的 git 地址。用例应该尽可能只包含复现错误,所需**最少**的代码。
+        另外请不要随意填写无关链接。如果未提供有效的链接，这个issue将被关闭。
       placeholder: 复现bug的代码仓库链接
     validations:
       required: true
