--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "release": "bumpp",
     "css-build": "css2plugin build css-plugin.css css-plugin-scss.scss --cwd test/fixtures/css",
     "css-build-out": "css2plugin build css-plugin.css css-plugin-scss.scss --cwd test/fixtures/css --out tw-plugins",
-    "-------": "-----------"
+    "-------": "-----------",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -76,8 +78,9 @@
   },
   "homepage": "https://weapp-tw.icebreaker.top",
   "devDependencies": {
-    "@ast-grep/napi": "^0.22.0",
+    "@ast-grep/napi": "^0.22.2",
     "@babel/core": "^7.24.5",
+    "@icebreakers/eslint-config": "^0.0.3",
     "@icebreakers/readme": "0.1.0",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-commonjs": "^25.0.7",
@@ -132,11 +135,11 @@
     "del": "^7.1.0",
     "diff": "^5.2.0",
     "domhandler": "^5.0.3",
-    "eslint": "8.57.0",
+    "eslint": "9.2.0",
     "eslint-config-icebreaker": "^1.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "execa": "^8.0.1",
+    "execa": "^9.0.2",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "get-value": "^3.0.1",
@@ -148,7 +151,7 @@
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.9.0",
     "miniprogram-automator": "^0.12.1",
-    "pkg-types": "^1.1.0",
+    "pkg-types": "^1.1.1",
     "postcss": "^8.4.38",
     "postcss-load-config": "^5.1.0",
     "postcss-loader": "^8.1.1",
@@ -156,8 +159,8 @@
     "promisify-loader-runner": "^1.0.1",
     "rollup": "^4.17.2",
     "rollup-plugin-visualizer": "^5.12.0",
-    "sass": "^1.77.0",
-    "semver": "7.6.1",
+    "sass": "^1.77.1",
+    "semver": "7.6.2",
     "set-value": "^4.1.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.3",
