--- a/package.json
+++ b/package.json
@@ -181,7 +181,7 @@
     "webpack": "^5.91.0",
     "webpack-build-utils": "^0.0.7"
   },
-  "_packageManager": "pnpm@9.1.0",
+  "packageManager": "pnpm@9.1.0",
   "engines": {
     "node": ">=20.0.0"
   }
