--- a/website/package.json
+++ b/website/package.json
@@ -2,6 +2,9 @@
   "name": "website",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": ">=16.14"
+  },
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "cross-env TYPEDOC_WATCH=true docusaurus start --port 4000",
@@ -29,8 +32,8 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.3.2",
-    "@docusaurus/tsconfig": "^3.3.2",
-    "@docusaurus/types": "^3.3.2",
+    "@docusaurus/tsconfig": "3.3.2",
+    "@docusaurus/types": "3.3.2",
     "@icebreakers/deploy": "^0.1.5",
     "@types/file-saver": "^2.0.7",
     "autoprefixer": "^10.4.19",
@@ -39,11 +42,11 @@
     "docusaurus-plugin-typedoc": "1.0.1",
     "dotenv": "^16.4.5",
     "node-loader": "^2.0.0",
-    "sass": "^1.77.2",
+    "sass": "^1.77.4",
     "sass-loader": "^14.2.0",
     "tailwindcss": "^3.4.3",
     "typedoc": "^0.25.13",
-    "typedoc-plugin-markdown": "4.0.2",
+    "typedoc-plugin-markdown": "4.0.3",
     "typescript": "^5.4.5",
     "webpack-node-externals": "^3.0.0"
   },
@@ -58,8 +61,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "engines": {
-    "node": ">=16.14"
   }
 }
