chore(skyline): mask-image not work https://developers.weixin.qq.com/miniprogram/dev/framework/runtime/skyline/wxss.html

--- a/apps/native-skyline/package.json
+++ b/apps/native-skyline/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "dev": "cross-env DEBUG='weapp-tw,weapp-tw-cli' weapp-tw dev",
     "build": "cross-env DEBUG='weapp-tw,weapp-tw-cli' weapp-tw build",
-    "postinstall": "weapp-tw patch"
+    "postinstall": "weapp-tw patch",
+    "open": "weapp open -p"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@egoist/tailwindcss-icons": "^1.8.0",
+    "@iconify-json/lucide": "^1.1.188",
+    "@iconify-json/mdi": "^1.1.66",
     "@weapp-tailwindcss/cli": "workspace:*",
     "tailwindcss": "^3.4.3",
+    "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss": "workspace:*"
   },
   "dependencies": {
