chore(plugins): fill repository field

--- a/plugins/cli/package.json
+++ b/plugins/cli/package.json
@@ -5,6 +5,10 @@
   "author": "SonOfMagic <qq1324318532@gmail.com>",
   "license": "MIT",
   "homepage": "https://weapp-tw.icebreaker.top/docs/quick-start/native/install",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git"
+  },
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
