--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -38,9 +38,9 @@
     "@types/gulp-replace": "^1.1.0",
     "@types/gulp-sass": "^5.0.4",
     "@types/gulp-util": "^3.0.41",
-    "@types/node": "^20.11.25",
-    "@weapp-tailwindcss/cli": "^1.0.0",
-    "autoprefixer": "^10.4.18",
+    "@types/node": "^20.13.0",
+    "@weapp-tailwindcss/cli": "^1.0.3",
+    "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "del": "^6.1.1",
     "eslint": "^8.57.0",
@@ -59,24 +59,24 @@
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-util": "^3.0.8",
     "miniprogram-api-typings": "^3.12.2",
-    "postcss": "^8.4.35",
-    "postcss-pxtransform": "^3.6.24",
+    "postcss": "^8.4.38",
+    "postcss-pxtransform": "^3.6.30",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-rpx-transform": "^1.0.1",
     "prettier": "^3.2.5",
-    "sass": "^1.71.1",
+    "sass": "^1.77.4",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-patch": "^2.2.3",
+    "tailwindcss-patch": "^2.2.4",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2",
+    "typescript": "^5.4.5",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss": "^3.2.1",
-    "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0"
+    "weapp-tailwindcss-children": "^0.1.0"
   },
   "dependencies": {
-    "@vant/weapp": "^1.11.4"
-  }
+    "@vant/weapp": "^1.11.6"
+  },
+  "packageManager": "yarn@1.22.22"
 }
